--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="../common/common.css">
+	<link rel="stylesheet" href="../widget.css">
 	<style>
 	#petContainer{
 		position:relative;
@@ -96,17 +96,27 @@
 		transition-property:opacity;
 		opacity:0;
 	}
+	
+	#petNew{
+		z-index:-1;
+		position:absolute;
+		height:100%;
+		width:100%
+		opacity:0;
+	}
 	</style>
 </head>
 
 <body>
 	<div id="petContainer">
-		<div id="topUI">
+		<div id="loadingContainer"></div>
+		<div id="petNew"></div>
+		<div id="topUI" class="widget-ui">
 			<div id="petRibbon">
 				<p class="ui-text-sm">99</p>
 			</div>
-			<div id="petName">
-				<h2>Rufus</h2>
+			<div>
+				<h2 id="petName">Rufus</h2>
 			</div>
 		</div>
 		<div id="petDisplay">
@@ -117,7 +127,7 @@
 				<div id="petBody" class="pet-body"></div>
 			</div>
 		</div>
-		<div id="bottomUI">
+		<div id="bottomUI" class="widget-ui">
 			<div id="careButtons">
 				<div id="UIPatBtn" class="care-btn"></div>
 				<div id="UIFoodBtn" class="care-btn"></div>
@@ -150,8 +160,8 @@
 	</div>
 <script type="text/javascript" src="petCare.js"></script>
 <script type="text/javascript" src="petAnimation.js"></script>
-<script type="text/javascript" src="../common/common.js"></script>
-<script type="text/javascript" src="../common/api.js"></script>
+<script type="text/javascript" src="../widget.js"></script>
+<script type="text/javascript" src="../../api.js"></script>
 <script>
 	// ----- ONLOAD FUNCTIONS
 	handlePetIdleAnimation(); // Put pet into an idle formation.
