--- a/widgets/dummy/index.html
+++ b/widgets/dummy/index.html
@@ -1,28 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="./includes/main.css">
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../widget.css">
 	<style>
-	body, html{
-		padding:0!important;
-		margin:0!important;
+	#petWidget{
+
 	}
-	#widgetContainer{
-		position:relative;
-		background: radial-gradient(circle, rgba(63,251,244,1) 0%, rgba(70,203,252,1) 100%);
-		background-color:lightblue;
-		border-radius:18px;
-		border:3px teal solid;
-		height:350px;
-		width:230px;
-		overflow:hidden;
+	
+	#bottomUI .care-btn{
+		height:42px;
+		width:42px;
+		background-size:contain;
+		background-repeat:no-repeat;
+	}
+
+	#UIPatBtn{ background: url('images/ui_btn_pat.png') center center; }
+	#UIFoodBtn{ background: url('images/ui_btn_feed.png') center center; }
+	#UICleanBtn{ background: url('images/ui_btn_clean.png') center center; }
+	#UIShopBtn{ background: url('images/ui_btn_buy.png') center center; }
+	
+	.progress-layout{
+		display:flex;
+		flex-direction:row;
+	}
+	
+	.progress-layout img{
+		height:20px;
+		width:20px;
+		margin:0.5px 0px;
+	
+	}
+	
+	#petRibbon{
+		background: url('images/ribbon_large.png') center center;
+		background-size:contain;
+		background-repeat:no-repeat;
+		width:40px;
+		height:60px;
+	}
+	#petRibbon p{
+		text-align:center;
+		font-size:15px;
+		font-weight:900;
+		padding-top:12px;
+		margin:auto;
+		text-shadow:0px 1px 1px teal, 1px 0px 1px teal, 0px -1px 1px teal, -1px 0px 1px teal;
+		color:white;
+	}
+	#petName{
+		color:white;
+		text-transform:uppercase;
+		padding-left:5%;
+		font:400 15px Helvetica,Arial,sans-serif;
+	}
+	#petAssembly{
+		padding:16px;
+		margin:auto;
+		margin-top:35%;
+		width:100px;
+		height:100px;
+	}
+	
+	#petAssembly .pet-head{
+		background: url('images/demo/pet.png') 0px 0px;
+		background-repeat:no-repeat;
+		width:64px;
+		height:64px;
+		margin:auto;
+	}
+	
+	#petDisplay{
+		height:70%;
+		width:100%;
+		z-index:0;
+		position:absolute;
+		top:0;
+	}
+	
+	#petEmoteSpace{
+		position:absolute;
+		top:25%;
+		height:25%;
+		width:100%;
+		z-index:1;
+		transition:1.5s;
+		transition-property:opacity;
+		opacity:0;
+	}
+	
+	#petNew{
+		z-index:-1;
+		position:absolute;
+		height:100%;
+		width:100%
+		opacity:0;
 	}
 	</style>
 </head>
+
 <body>
-	<div id="widgetContainer">
-		<p style="text-align:center;margin:auto;padding-top:55%;font-size:2em;color:white;font-weight:900">COMING</br>SOON</p>
+	<div id="dummyWidget" class="widget-box">
+		<div id="petNew"></div>
+		<div id="topUI" class="widget-ui">
+		</div>
+		<div id="xDisplay" style="text-align:center;padding-top:33%">
+			<h2>COMING SOON</h2>
+		</div>
+		<div id="bottomUI" class="widget-ui">
+		</div>
+	
 	</div>
+<script type="text/javascript" src="../widget.js"></script>
+<script type="text/javascript" src="../../api.js"></script>
+<script>
+	// ----- ONLOAD FUNCTIONS
+
+</script>
 </body>
 
 </html>
