Add loading element & GIF to widgets

--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -102,7 +102,7 @@
 
 <body>
 	<div id="petWidget" class="widget-box">
-		<div id="loadingOverlay" class="widget-overlay"></div>
+		<div id="loadingOverlay" class="widget-overlay"><img src="../common/loading.gif" id="loadingSpinner"></div>
 		<div id="petNew"></div>
 		<div id="topUI" class="widget-ui">
 			<div id="petRibbon">
