Further remove pet stuff from dummy

--- a/widgets/dummy/index.html
+++ b/widgets/dummy/index.html
@@ -4,100 +4,7 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="../widget.css">
-	<style>
-	#petWidget{
-
-	}
-	
-	#bottomUI .care-btn{
-		height:42px;
-		width:42px;
-		background-size:contain;
-		background-repeat:no-repeat;
-	}
-
-	#UIPatBtn{ background: url('images/ui_btn_pat.png') center center; }
-	#UIFoodBtn{ background: url('images/ui_btn_feed.png') center center; }
-	#UICleanBtn{ background: url('images/ui_btn_clean.png') center center; }
-	#UIShopBtn{ background: url('images/ui_btn_buy.png') center center; }
-	
-	.progress-layout{
-		display:flex;
-		flex-direction:row;
-	}
-	
-	.progress-layout img{
-		height:20px;
-		width:20px;
-		margin:0.5px 0px;
-	
-	}
-	
-	#petRibbon{
-		background: url('images/ribbon_large.png') center center;
-		background-size:contain;
-		background-repeat:no-repeat;
-		width:40px;
-		height:60px;
-	}
-	#petRibbon p{
-		text-align:center;
-		font-size:15px;
-		font-weight:900;
-		padding-top:12px;
-		margin:auto;
-		text-shadow:0px 1px 1px teal, 1px 0px 1px teal, 0px -1px 1px teal, -1px 0px 1px teal;
-		color:white;
-	}
-	#petName{
-		color:white;
-		text-transform:uppercase;
-		padding-left:5%;
-		font:400 15px Helvetica,Arial,sans-serif;
-	}
-	#petAssembly{
-		padding:16px;
-		margin:auto;
-		margin-top:35%;
-		width:100px;
-		height:100px;
-	}
-	
-	#petAssembly .pet-head{
-		background: url('images/demo/pet.png') 0px 0px;
-		background-repeat:no-repeat;
-		width:64px;
-		height:64px;
-		margin:auto;
-	}
-	
-	#petDisplay{
-		height:70%;
-		width:100%;
-		z-index:0;
-		position:absolute;
-		top:0;
-	}
-	
-	#petEmoteSpace{
-		position:absolute;
-		top:25%;
-		height:25%;
-		width:100%;
-		z-index:1;
-		transition:1.5s;
-		transition-property:opacity;
-		opacity:0;
-	}
-	
-	#petNew{
-		z-index:-1;
-		position:absolute;
-		height:100%;
-		width:100%
-		opacity:0;
-	}
-	</style>
+	<style></style>
 </head>
 
 <body>
@@ -116,7 +23,6 @@
 <script type="text/javascript" src="../../api.js"></script>
 <script>
 	// ----- ONLOAD FUNCTIONS
-
 </script>
 </body>
 
