--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -2,91 +2,39 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-	<link rel="stylesheet" href="./includes/main.css">
+	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="../widget.css">
 	<style>
-	body, html{
-		padding:0!important;
-		margin:0!important;
-	}
-	#petContainer{
-		position:relative;
-		background: radial-gradient(circle, rgba(63,251,244,1) 0%, rgba(70,203,252,1) 100%);
-		background-color:lightblue;
-		border-radius:18px;
-		border:3px teal solid;
-		height:350px;
-		width:230px;
-		overflow:hidden;
+	#petWidget{
+
 	}
 	
-	#bottomUI{
-		position:absolute;
-		bottom:0;
-		left:0;
-		height:86px;
-		width:100%;
-		background-color:#efefff;
-		box-shadow:0px 0px 10px 4px #00000030;
-		padding:15px 6px 24px 6px;
-		z-index:3;
-	}
 	#bottomUI .care-btn{
 		height:42px;
 		width:42px;
 		background-size:contain;
 		background-repeat:no-repeat;
 	}
-	#careButtons{
-		display:flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		justify-content: space-around;
-		align-items: center;
-		cursor: pointer;
-	}
-	#UIPatBtn{ background: url('includes/images/ui_btn_pat.png') center center; }
-	#UIFoodBtn{ background: url('includes/images/ui_btn_feed.png') center center; }
-	#UICleanBtn{ background: url('includes/images/ui_btn_clean.png') center center; }
-	#UIShopBtn{ background: url('includes/images/ui_btn_buy.png') center center; }
+
+	#UIPatBtn{ background: url('images/ui_btn_pat.png') center center; }
+	#UIFoodBtn{ background: url('images/ui_btn_feed.png') center center; }
+	#UICleanBtn{ background: url('images/ui_btn_clean.png') center center; }
+	#UIShopBtn{ background: url('images/ui_btn_buy.png') center center; }
 	
 	.progress-layout{
 		display:flex;
 		flex-direction:row;
 	}
 	
-	.pet-progress-bar{
-		margin:3px 20px 3px 5px;
-		border:2.5px white solid;
-		border-radius:10px;
-		height:8px;
-		background:#cdcddc;
-		width:100%;
-		box-shadow:inset 1px 2px 1px 0px rgba(35,35,35,0.1);
-		overflow:hidden;
-	}
-	
 	.progress-layout img{
-	height:20px;
-	width:20px;
-	margin:0.5px 0px;
+		height:20px;
+		width:20px;
+		margin:0.5px 0px;
 	
-	}
-	
-	#topUI{
-		position:absolute;
-		display:flex;
-		flex-direction:row;
-		top:0;
-		left:0;
-		height:60px;
-		width:100%;
-		box-shadow:0px 6px 6px 0px #00000030 inset;
-		padding:10px;
-		z-index:3;
 	}
 	
 	#petRibbon{
-		background: url('includes/images/ribbon_large.png') center center;
+		background: url('images/ribbon_large.png') center center;
 		background-size:contain;
 		background-repeat:no-repeat;
 		width:40px;
@@ -116,7 +64,7 @@
 	}
 	
 	#petAssembly .pet-head{
-		background: url('includes/images/demo/pet.png') 0px 0px;
+		background: url('images/demo/pet.png') 0px 0px;
 		background-repeat:no-repeat;
 		width:64px;
 		height:64px;
@@ -142,25 +90,26 @@
 		opacity:0;
 	}
 	
-	.progress-bar-fill{
+	#petNew{
+		z-index:-1;
+		position:absolute;
 		height:100%;
-		width:33%;
-		background-color:#00d200;
-		transition-duration:1s;
-		transition-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
-		box-shadow: inset 2px 2px 3px 0px #ffffff79;
+		width:100%
+		opacity:0;
 	}
 	</style>
 </head>
 
 <body>
-	<div id="petContainer">
-		<div id="topUI">
+	<div id="petWidget" class="widget-box">
+		<div id="loadingOverlay" class="widget-overlay"><img src="../common/loading.gif" id="loadingSpinner"></div>
+		<div id="petNew"></div>
+		<div id="topUI" class="widget-ui">
 			<div id="petRibbon">
 				<p class="ui-text-sm">99</p>
 			</div>
-			<div id="petName">
-				<h2>Rufus</h2>
+			<div>
+				<h2 id="petName">Rufus</h2>
 			</div>
 		</div>
 		<div id="petDisplay">
@@ -171,7 +120,7 @@
 				<div id="petBody" class="pet-body"></div>
 			</div>
 		</div>
-		<div id="bottomUI">
+		<div id="bottomUI" class="widget-ui">
 			<div id="careButtons">
 				<div id="UIPatBtn" class="care-btn"></div>
 				<div id="UIFoodBtn" class="care-btn"></div>
@@ -180,20 +129,20 @@
 			</div>
 			<div id="careProgress">
 				<div class="progress-layout">
-					<img src="includes/images/ui_icon_happiness.png" alt="Pet Happiness">
-					<div id="barHappiness" class="pet-progress-bar">
+					<img src="images/ui_icon_happiness.png" alt="Pet Happiness">
+					<div id="barHappiness" class="progress-bar">
 						<div id="barHappinessFill" class="progress-bar-fill"></div>
 					</div>
 				</div>
 				<div class="progress-layout">
-					<img src="includes/images/ui_icon_health.png" alt="Pet Health">
-					<div id="barHealth" class="pet-progress-bar">
+					<img src="images/ui_icon_health.png" alt="Pet Health">
+					<div id="barHealth" class="progress-bar">
 						<div id="barHealthFill" class="progress-bar-fill"></div>
 					</div>
 				</div>
 				<div class="progress-layout">
-					<img src="includes/images/ui_icon_hygiene.png" alt="Pet Cleanliness">
-					<div id="barHygiene" class="pet-progress-bar">
+					<img src="images/ui_icon_hygiene.png" alt="Pet Cleanliness">
+					<div id="barHygiene" class="progress-bar">
 						<div id="barHygieneFill" class="progress-bar-fill"></div>
 					</div>
 				</div>
@@ -202,12 +151,17 @@
 		</div>
 	
 	</div>
-<script type="text/javascript" src="includes/petCare.js"></script>
-<script type="text/javascript" src="includes/petAnimation.js"></script>
+<script type="text/javascript" src="../widget.js"></script>
+<script type="text/javascript" src="../../api.js"></script>
+<script type="text/javascript" src="petApi.js"></script>
+<script type="text/javascript" src="petCare.js"></script>
+<script type="text/javascript" src="petAnimation.js"></script>
 <script>
 	// ----- ONLOAD FUNCTIONS
 	handlePetIdleAnimation(); // Put pet into an idle formation.
 	petUpdateCareBars(); // Set our care status bars.
+	
+	apiConnectPet();
 </script>
 </body>
 
