Define CSS classes to handle widget size
We'll probably have larger widgets in the future..

--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-	<div id="petWidget" class="widget-box">
+	<div id="petWidget" class="widget-box widget-m">
 		<div id="loadingOverlay" class="widget-overlay"><img src="../common/loading.gif" id="loadingSpinner"></div>
 		<div id="petNew"></div>
 		<div id="topUI" class="widget-ui">
@@ -113,7 +113,7 @@
 				<h3 id="petMotto">Rufus</h3>
 			</div>
 		</div>
-		<div id="petDisplay">
+		<div id="s2wDisplay">
 			<div id="petEmoteSpace">
 			</div>
 			<div id="petAssembly">
