Add compatibility for filling width for menus
Cross-browser support with the old width:100% as failsafe

--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -121,12 +121,12 @@
 				<div id="petBody" class="pet-body"></div>
 			</div>
 		</div>
-		<div id="bottomUI" class="widget-ui">
+		<div id="bottomUI" class="widget-ui bottom-m">
 			<div id="careButtons">
 				<div id="UIPatBtn" class="care-btn"></div>
 				<div id="UIFoodBtn" class="care-btn"></div>
 				<div id="UICleanBtn" class="care-btn"></div>
-				<div id="UIShopBtn" class="care-btn"></div>
+				<!-- <div id="UIShopBtn" class="care-btn"></div> -->
 			</div>
 			<div id="careProgress">
 				<div class="progress-layout">
