--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -113,7 +113,7 @@
 				<h3 id="petMotto">Rufus</h3>
 			</div>
 		</div>
-		<div id="s2wDisplay">
+		<div id="petDisplay">
 			<div id="petEmoteSpace">
 			</div>
 			<div id="petAssembly">
@@ -163,7 +163,6 @@
 	petUpdateCareBars(); // Set our care status bars.
 	
 	let widget_pet_data; // We will store our pet's data in this variable upon load.
-	
 	apiConnectPet();
 </script>
 </body>
