Create interactive placeholder for S2W
We're getting there but still need to hook into the API.
Widget view is complete
Added ho tomepage

--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ flex-direction:row;
 		<h2 id="welcomeHeading">Welcome back!</h2><br>
 		<div id="widgetGrid">
 			<x-widget id="pet" src="widgets/pet/index.html" height="356px" width="240px"></x-widget>
-			<x-widget id="plant" src="widgets/plant/index.html" height="356px" width="240px"></x-widget>
+			<!-- <x-widget id="plant" src="widgets/plant/index.html" height="356px" width="240px"></x-widget> -->
+			<x-widget id="spin" src="widgets/spin/index.html" height="356px" width="510px"></x-widget>
 		</div>
 		<h2>Featured Spaces (TODO: hook into API)</h2>
 			<div id="featured-grid">
@@ -379,7 +380,7 @@ flex-direction:row;
 	setTimeout(function(){
 		if(document.getElementById('character-name').innerHTML == "John SmallWorlds"){
 			console.log("Homepage in error state. Invalidate session.");
-			handleLogout();
+			// handleLogout();
 		}
 	},12000);
   </script>
