fix s2w logo display in widget

--- a/widgets/spin/index.html
+++ b/widgets/spin/index.html
@@ -171,10 +171,10 @@
 		text-align:center;
 	}
 	
-	.s2wImg{
+	.s2w-img{
 		pointer-events:none;
 		width:fit-content;
-		
+		height:fit-content;
 	}
 	
 	</style>
@@ -184,8 +184,8 @@
 	<div id="s2wWidget" class="widget-box widget-l">
 		<div id="loadingOverlay" class="widget-overlay"><img src="../common/loading.gif" id="loadingSpinner"></div>
 		<div id="topUI" class="widget-ui">
-			<img id="s2wLogo" class="s2wImg" src="./images/logo_s2w.png">
-			<img id="s2wLogoDeluxe" class="s2wImg" src="./images/logo_s2w_deluxe.png">
+			<img id="s2wLogo" class="s2w-img" src="./images/logo_s2w.png">
+			<img id="s2wLogoDeluxe" class="s2w-img" src="./images/logo_s2w_deluxe.png">
 		</div>
 		<div id="s2wDisplay">
 			<div class="s2w-play-btn-container">
