Define more widget-box sizes.

--- a/widgets/pet/index.html
+++ b/widgets/pet/index.html
@@ -101,7 +101,7 @@
 </head>
 
 <body>
-	<div id="petWidget" class="widget-box widget-m">
+	<div id="petWidget" class="widget-box widget-s">
 		<div id="loadingOverlay" class="widget-overlay"><img src="../common/loading.gif" id="loadingSpinner"></div>
 		<div id="petNew"></div>
 		<div id="topUI" class="widget-ui">
