Fix widget sizing in some instances

--- a/widgets/plant/index.html
+++ b/widgets/plant/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<div id="dummyWidget" class="widget-box">
+	<div id="dummyWidget" class="widget-box widget-s">
 		<div id="placeholder-plant">
 		
 		
