--- a/widgets/spin/index.html
+++ b/widgets/spin/index.html
@@ -161,14 +161,17 @@
 	.wheel-slice-32{ rotate:0deg;}
 	
 	.s2w-play-btn-container{
-		position:absolute;
-		top:45%;
-    	width: 100%; /* Failsafe. */
-    	width: -moz-available; /* Chromium. */
-		width: -webkit-fill-available;  /* Firefox. */
-		width: fill-available; /* Hopefully someday... */
-		z-index:5;
-		text-align:center;
+	position:absolute;
+	height:80%;
+	width: 33%;
+    z-index: 5;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+    flex-direction: column;
 	}
 	
 	.s2w-img{
@@ -189,7 +192,11 @@
 		</div>
 		<div id="s2wDisplay">
 			<div class="s2w-play-btn-container">
-				
+				<button id="basicPlay" class="swx-btn-widget swx-btn-full swx-btn-big">SPIN TO WIN</button>
+				<button id="deluxePlay" class="swx-btn-widget swx-btn-full swx-btn-big">DELUXE SPIN</button>
+				<button id="deluxePay1" class="swx-btn-widget swx-btn-full">Buy [0] Spin for [1] Gold</button>
+				<button id="deluxePay2" class="swx-btn-widget swx-btn-full">Buy [0] Spin for [1] Gold</button>
+				<button id="deluxePay3" class="swx-btn-widget swx-btn-full">Buy [0] Spin for [1] Gold</button>
 			</div>
 			<div id="wheelTileBasic" class="s2w-wheel-basic-hover">
 				<div class="wheel-element">
@@ -272,6 +279,7 @@
 	</div>
 <script type="text/javascript" src="../widget.js"></script>
 <script type="text/javascript" src="../../api.js"></script>
+<script type="text/javascript" src="s2w.js"></script>
 <script type="text/javascript" src="s2wApi.js"></script>
 <script>
 	// ----- ONLOAD FUNCTIONS
@@ -280,46 +288,13 @@
 	s2wOnLoad();
 	apiConnectS2W();
 	// ----- EVENT LISTENERS
+	document.getElementById('wheelTileBasic').addEventListener('click', s2wBasicWheelInit);
 	document.getElementById('wheelTileBasic').addEventListener('mouseleave', s2wClearWidgetStyles);
+	document.getElementById('wheelTileBasic').addEventListener('mouseenter', s2wBasicWheelFocus);
 	
-	
-	document.getElementById('wheelTileBasic').addEventListener('mouseenter', function(){
-		document.querySelector("div#wheelTileBasic div.wheel-element").style.setProperty('left', '-75%');
-		document.querySelector("div#wheelTileBasic div.wheel-element").style.setProperty('z-index', '2');
-		document.querySelector("div#wheelTileDeluxe div.wheel-element").style.setProperty('z-index', '0');
-		document.querySelector("div#wheelTileBasic").style.setProperty('width', '60%');
-		document.querySelector("div#bottomUI").style.setProperty('bottom', '-35px');
-	});
 	
 	document.getElementById('wheelTileDeluxe').addEventListener('mouseleave', s2wClearWidgetStyles);
-	
-	document.getElementById('wheelTileDeluxe').addEventListener('mouseenter', function(){
-		document.querySelector("div#wheelTileBasic div.wheel-element").style.setProperty('left', '-140%');
-		document.querySelector("div#wheelTileDeluxe div.wheel-element").style.setProperty('right', '-75%');
-		document.querySelector("div#wheelTileDeluxe div.wheel-element").style.setProperty('z-index', '2');
-		document.querySelector("div#wheelTileBasic div.wheel-element").style.setProperty('z-index', '0');
-		document.querySelector("div#wheelTileDeluxe").style.setProperty('width', '60%');
-		document.querySelector("div#wheelTileBasic").style.setProperty('width', '40%');
-		document.querySelector("div#bottomUI").style.setProperty('bottom', '-35px');
-	});
-	
-	
-	
-	
-	// ----- FUNCTIONS
-	function s2wOnLoad(){
-		document.querySelector('div.s2w-play-btn-container').style.setProperty('display','none');
-	}
-	
-	function s2wClearWidgetStyles(){
-	
-		document.querySelector("div#wheelTileBasic div.wheel-element").style='';
-		document.querySelector("div#wheelTileDeluxe div.wheel-element").style='';
-		document.querySelector("div#wheelTileBasic").style='';
-		document.querySelector("div#wheelTileDeluxe").style='';
-		document.querySelector("div#bottomUI").style='';
-		
-	}
+	document.getElementById('wheelTileDeluxe').addEventListener('mouseenter', s2wDeluxeWheelFocus);
 	
 </script>
 </body>
